--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,27 @@
+# Core dependencies
 fastapi==0.104.1
-uvicorn==0.23.2
+uvicorn[standard]==0.23.2
 sqlalchemy==2.0.22
 pydantic==2.4.2
+pydantic[email]==2.4.2
 python-jose==3.3.0
 passlib==1.7.4
 python-multipart==0.0.6
 bcrypt==4.0.1
 websockets==11.0.3
 python-dotenv==1.0.0
+
+# Development dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.0
+black==23.10.1
+flake8==6.1.0
+isort==5.12.0
+
+# Documentation
+mkdocs==1.5.3
+mkdocs-material==9.4.6
+
+# Deployment
+gunicorn==21.2.0
